syntax = "proto3";
option go_package = "github.com/Vahsek/distrokv/pkg/node/dataplane";
package nodedataplane;

service NodeKeyValueService{
    rpc GetKey(GetRequest) returns (GetResponse);
    rpc SetKey(SetRequest) returns (SetResponse);
    rpc DeleteKey(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
    bool status = 3;
    string error = 4;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string key = 1;
    bool status = 2;
    string error = 3;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string key = 1;
    string value = 2;
    bool status = 3;
    string error = 4;
}